--- a/custom_components/visonicalarm/manifest.json
+++ b/custom_components/visonicalarm/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/givanov/VisonicAlarm-for-Hassio",
   "version": "v1.0.0",
   "requirements": [
-    "git+https://github.com/givanov/VisonicAlarm2.git",
+    "visonicalarm2@git+https://github.com/givanov/VisonicAlarm2.git@1.0.0",
     "python-dateutil==2.7.3"
   ],
   "dependencies": [],
