fix: fix requirement format
Signed-off-by: Georgi Ivanov <givanov@dnsfilter.com>

--- a/custom_components/visonicalarm/manifest.json
+++ b/custom_components/visonicalarm/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/givanov/VisonicAlarm-for-Hassio",
   "version": "v1.1.0",
   "requirements": [
-    "git+https://github.com/givanov/VisonicAlarm2.git@1.1.0#egg=visonicalarm2",
+    "git+https://github.com/givanov/VisonicAlarm2.git@1.1.0#visonicalarm2",
     "python-dateutil==2.7.3"
   ],
   "dependencies": [],
